-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: None
-
Component/s: core-libs
-
b137
-
solaris
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8250252 | openjdk8u272 | Roger Riggs | P1 | Resolved | Fixed | b01 |
Fix for JDK-8165936 broke builds on solaris.
"/scratch/jenkins/workspace/9-dev/jdk/src/java.base/unix/native/libjava/TimeZone_md.c", line 141: error: undefined symbol: NAME_MAX
cc: acomp failed for /scratch/jenkins/workspace/9-dev/jdk/src/java.base/unix/native/libjava/TimeZone_md.c
CoreLibraries.gmk:140: recipe for target '/scratch/jenkins/workspace/9-dev/build/solaris-x64/support/native/java.base/libjava/TimeZone_md.o' failed
make[3]: *** [/scratch/jenkins/workspace/9-dev/build/solaris-x64/support/native/java.base/libjava/TimeZone_md.o] Error 1
"/scratch/jenkins/workspace/9-dev/jdk/src/java.base/unix/native/libjava/TimeZone_md.c", line 141: error: undefined symbol: NAME_MAX
cc: acomp failed for /scratch/jenkins/workspace/9-dev/jdk/src/java.base/unix/native/libjava/TimeZone_md.c
CoreLibraries.gmk:140: recipe for target '/scratch/jenkins/workspace/9-dev/build/solaris-x64/support/native/java.base/libjava/TimeZone_md.o' failed
make[3]: *** [/scratch/jenkins/workspace/9-dev/build/solaris-x64/support/native/java.base/libjava/TimeZone_md.o] Error 1
- backported by
-
JDK-8250252 Fix for JDK-8165936 broke Solaris builds
-
- Resolved
-
- relates to
-
JDK-8165936 Potential Heap buffer overflow when seaching timezone info files
-
- Resolved
-