8166148: Fix for JDK-8165936 broke solaris builds

Reviewed-by: naoto